# svgager

./: .gitignore  .tool-versions  CONTRIBUTING.md  LICENSE  README.md  checksum-Elixir.Svgager.Native.exs  mise.toml  mix.exs
.github/: dependabot.yml  release-drafter.yml  rust-test.yml
.github/workflows/: release-drafter.yml  rust-releaser.yml
config/: config.exs  dev.exs  prod.exs  test.exs
lib/: svgager.ex
lib/svgager/: converter.ex  native.ex
native/svgager_native/: Cargo.toml  README.md
native/svgager_native/src/: converter.rs  lib.rs
test/: svgager_test.exs
test/support/: test_helper.ex
test/svgager/: converter_test.exs  dimension_test.exs  validity_test.exs
