[package]
name = "svgager_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "svgager_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34.0"
resvg = "0.44.0"
usvg = "0.44.0"
tiny-skia = "0.11.4"
image = { version = "0.25.5", features = ["png", "jpeg", "gif", "webp"] }
